# minecraft-cxx

./: .gitignore  CMakeLists.txt
src/: main.cc  mpch.cc  mpch.h
src/core/: window.cc  window.h
src/impl/win32/: win32_window.cc  win32_window.h
src/minecraft/: common.h
src/minecraft/core/: application.cc  application.h  window.cc  window.h
src/minecraft/impl/opengl/: opengl_context.cc  opengl_context.h
src/minecraft/impl/win32/: win32_window.cc  win32_window.h
src/minecraft/render/: buffer.h  context.cc  context.h
